--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+@media (orientation: landscape) {
+    img {
+        max-width: 75%;
+    }
+}
+@media (orientation: portrait) {
+    img {
+        max-width: 100%;
+    }
+}
+
 body {
     color:yellow;
     background:black;
